# dao-linux

./: ProjectHome.md
c-inside-1.3/: Makefile.am  config.h.in
c-inside-1.3/examples/: errno.ci
c-inside-1.3/include/: c-inside-sys.h  c-inside.h
c-inside-1.3/libc-inside/: Makefile.am  builtin.c  c-inside.c  efault.c  expr.c  keyword.c  license.h  list.c  makefile-dev  namespace.c  operator.c  parse.c
c-inside-1.3/utilities/: Makefile.am  makefile-dev
examples/: breakpoint.c  ptrace.c  signal.c  timing.c
linja/: Makefile  syscalls.h
trunk/: README
trunk/c-inside-1.3/: AUTHORS  ChangeLog  Makefile.in  NEWS  README  cleanup.sh  configure  configure.ac
trunk/c-inside-1.3/docs/man1/: c-inside.1
trunk/c-inside-1.3/docs/man3/: c-inside.3  cinside_simple.3
trunk/c-inside-1.3/examples/: README  date.ci  ls.ci  mksock.ci  pwd.ci  result.sh  timing.ci
trunk/c-inside-1.3/libc-inside/: Makefile.in  caller.s  internal.h  iterators.c  language.h  system.c
trunk/c-inside-1.3/utilities/: Makefile.in  c-inside.c
trunk/linja/: linja.c  syscalls.c
