SUBDIRS = libc-inside utilities
dist_man_MANS = docs/man1/c-inside.1 docs/man3/c-inside.3 \
                docs/man3/cinside_destroy.3 docs/man3/cinside_eval.3 \
                docs/man3/cinside_get.3 docs/man3/cinside_go.3 \
                docs/man3/cinside_init.3 docs/man3/cinside_set.3 \
                docs/man3/cinside_simple.3

ACLOCAL_AMFLAGS = -I m4
