lib_LTLIBRARIES = libc-inside.la
include_HEADERS = ../include/c-inside.h ../include/c-inside-sys.h

libc_inside_la_SOURCES = c-inside.c parse.c expr.c operator.c keyword.c \
    namespace.c list.c efault.c builtin.c system.c iterators.c caller.s \
    internal.h language.h

AM_CPPFLAGS = -I../include
